style.css
/* Style sheet for TOP Landing Page */

body {
    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }

  .header,
  .content-one,
  .footer {
    background-color: #1F2937;
  }

  .header,
  .content-one,
  .content-two,
  .content-three,
  .content-four,
  .footer {
    padding: 0px 90px;
  }
.header {
    color: #E5E7EB;
    display: flex;
    justify-content: space-between
    
  }

.header-logo,
.header-links {
   
    display: flex;
    align-items: center;
    
  }
  .header-links {
   
  }
.header-logo {
    font-size: 24px;
    font-weight: 700;
    columns: #F9FAF8;
    
  }

.links {
    list-style-type: none;
    display: flex;
    font-weight: 200;
}

a {
    text-decoration: none;
    color: inherit;
  }

.content {
    display: flex;
    flex-direction: column;

}

.content-one {
    display: flex;
    align-items: center;
    justify-content: space-between;
    
}

.content-one-blurb {
    display: flex;
    flex-direction: column;
    color: #E5E7EB;
    /* max-width: 520px; */
}

.header1 {
    color: #F9FAF8;
    font-size: 32px;
    font-weight: 900;
    margin-bottom: 10px;
}

.blurb-text {
    font-size: 13px;
    margin-bottom: 10px;
}

.signup {
  border: none;
  color: white;
  padding: 5px 20px;
  text-align: center;
  text-decoration: none;
  display: flex;
  font-size: 14px;
  margin: 4px 2px;
  /* cursor: pointer; */
  border-radius: 5px;
  background-color: #3882F6;
  align-items: center;
}

.header2,
.header2a {
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
}

.header2a {
    display: flex;
    justify-content: center;
    padding: 20px;
}

.signup2 {
    background-color: #3882F6;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 14px;
    border-radius: 6px;
    border-color: white;
    color: white;
    margin: auto 30px;
    border-style: solid;
    padding: 4px 20px;
    
}

.content-two {
    display: flex;
    flex-direction: column;
    justify-content: center;
    
}

.cards {
    display: flex;
    gap: 50px;
    justify-content: center;
    
    
}

.card {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center; 
    max-width: 150px;
    flex: 1;
    
    
    
}
.card-text {
    /* max-width: 100px; */
    font-size: 14px;
    align-self: center;
    padding: auto;
    text-align: center;
    
}

.card-image {
    width: 100%;
    

}

.content-three {
    background-color: #E5E7EB;
    padding: 60px 220px;
}

.inspire-text {
    font-size: 28px;
    font-weight: 200;
    font-style: oblique 10deg;
    color: #1F2937;
    margin-bottom: 10px;
}
.signed-by {
    display: flex;
    flex-direction: row-reverse;
    font-weight: 800;
    /* padding-right: 30px; */
    margin-right: 30px;
}

li {
    padding-left: 20px;
}

.content-four {
    display: flex;
    justify-content: center;
    color: white;
    
    
}

.content-four-blurb-box {
    display: flex;
    justify-content: space-around;
    background-color: #3882F6;
    border-radius: 5px;
    padding: 10px 50px;
    gap: 80px;
    
}
.content-four-blurb {
    padding: 20px 40px;
    display: flex;
    flex-direction: column;
   
    border-radius: 5px;
    font-size: 14px;
    font-weight: 300;
    

}
.header3 {
    font-size: 18px;
    font-weight: 500;
    margin-bottom: 2px;
}
.footer {
    color: #F9FAF8;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 60px;
    font-weight: 200;
    font-size: 12px;
}

.wruff {
    font-style: normal;
    flex-direction: ;
}

